# analytics

./: Cargo.toml  Dockerfile  Dockerfile.test  README.md  analytics_postman.json  docker-compose.test.yml
src/: index.html  main.rs  v1.rs  v2.rs
