[package]
name = "analytics"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"
reqwest = "0.5"
analytics-proto = {git = "https://github.com/ldev-r3-t4/analytics-proto", rev = "8183794e96c09defc36fea6c5865fa06916a2c85"}